--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "^7.0.3",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^4.0.0",
+    "commitizen": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "eslint": "^7.5.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.3.0",
     "mini-css-extract-plugin": "^2.4.4",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "babel-eslint": "^10.1.0",
-    "commitizen": "^3.0.0",
-    "eslint": "^7.5.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.3.0"
+    "webpack-dev-server": "^4.4.0"
   }
 }
